# serializer version: 1
# name: test_download_file_error
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting DOWNLOAD of feedback files
  Fetching file: RIAE_FS_00000000000000_FichierRetour.json
  Error while parsing file RIAE_FS_00000000000000_FichierRetour.json: ex=PermissionError(13, 'Permission denied')
  Will not delete file 'RIAE_FS_00000000000000_FichierRetour.json' because of errors.
  Successfully parsed 0/1 files
  Employee records processing done!
  
  '''
# ---
# name: test_missing_environment_asp_fs_sftp_host
  '''
  Your environment is missing ASP_FS_SFTP_HOST to run this command.
  
  '''
# ---
# name: test_option_asp_test
  '''
  Using *TEST* JSON serializers (SIRET number mapping)
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting DOWNLOAD of feedback files
  Successfully parsed 0/0 files
  Employee records processing done!
  
  '''
# ---
# name: test_preflight
  '''
  Preflight activated, checking for possible serialization errors...
  Found 3 object(s) to check, split in chunks of 700 objects.
  Checking file #1 (chunk of 3 objects)
  All serializations ok, you may skip preflight...
  
  '''
# ---
# name: test_preflight_with_error
  '''
  Preflight activated, checking for possible serialization errors...
  Found 1 object(s) to check, split in chunks of 700 objects.
  Checking file #1 (chunk of 1 objects)
  ERROR: serialization of PK:42 PASS: SIRET:17483349486512 JA:49536a29-88b5-49c3-8c46-333bbbc36308 JOBSEEKER:4242 STATUS:READY failed!
  > Got AttributeError when attempting to get a value for field `passDateDeb` on serializer `_PersonSerializer`.
  > The serializer field might be named incorrectly and not match any attribute or key on the `EmployeeRecord` instance.
  > Original exception text was: 'NoneType' object has no attribute 'start_at'.
  
  '''
# ---
# name: test_preflight_without_object
  '''
  Preflight activated, checking for possible serialization errors...
  No object to check. Exiting preflight.
  
  '''
# ---
# name: test_upload_and_download
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting UPLOAD of employee records
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee records processing done!
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting DOWNLOAD of feedback files
  Fetching file: RIAE_FS_20210927000000_FichierRetour.json
  Record: line_number=1, processing_code='0000', processing_label='OK'
  Successfully processed 'RIAE_FS_20210927000000_FichierRetour.json', it can be deleted.
  Deleting 'RIAE_FS_20210927000000_FichierRetour.json' from SFTP server
  Successfully parsed 1/1 files
  Employee records processing done!
  
  '''
# ---
# name: test_upload_file_error
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting UPLOAD of employee records
  Could not upload file: RIAE_FS_20210927000000.json, reason: [Errno 2] No such file
  Could not upload file, exiting ...
  Employee records processing done!
  
  '''
# ---
# name: test_upload_only_create_a_limited_number_of_files
  '''
  Connected to "0.0.0.0" as "django_tests"
  Current remote dir is "/"
  Starting UPLOAD of employee records
  Successfully uploaded: RIAE_FS_20210927000000.json
  Employee records processing done!
  
  '''
# ---
